<resources>
    <string name="app_name">Habit Reminder</string>
    <string name="onboarding_islamic_goals">Islamic Goals</string>
    <string name="onboarding_improve_collectively_heading">Improve Collectively!</string>
    <string name="onboarding_build_your_day_heading"><b>Build</b> your Day!</string>
    <string name="onboarding_build_your_day_text">Around <b>Prayer</b> with your <b>Salah</b> integrated <b>Calendar</b></string>
    <string name="onboarding_together_cricle">Together with your Circles.</string>
    <string name="onboarding_grow_mind_heading"><b>Grow</b> Mindful!</string>
    <string name="onboarding_gratitude_journal">Using your <b>Gratitude Journal</b></string>
    <string name="optimze_ibadah">Optimize\nyour\nIbadah</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="header_login_back">Login</string>
    <string name="name_input_header">Enter your name:</string>
    <string name="email_input_header">Enter your email:</string>
    <string name="password_input_header">Enter your password:</string>
    <string name="form_input_separator">OR</string>
    <string name="login_next">NEXT</string>
    <string name="signup_header_back">Sign up</string>
    <string name="password_contain_hint">Should include letters &amp; numbers</string>
    <string name="confirm_password_input_header">Confirm password:</string>
    <string name="city_name">Which city are you in?</string>
    <string name="use_my_location">Use My Location</string>
    <string name="onboarding_reach_your_goals"><b>Reach</b> Your Goals</string>
    <string name="onboarding_ajr_tracker">With your personalized <b>Islamic reminders</b> and <b>Ajr Tracker</b></string>
    <string name="walk_throughscreen_button">Begin</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="iphone_calender">iPhone Calendar</string>
    <string name="google_calendar">Google Calendar</string>
    <string name="sync_calender">Select the calendar to sync with</string>
    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="facebook_app_id">359153531466299</string>
    <string name="fb_login_protocol_scheme">fb359153531466299</string>

    <!--Here start the strings for Home Fragments-->
    <string name="welcome_user"><b>Welcome,\nHamza</b></string>
    <string name="welcome_user_description">Check Out Your Dashboard here.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_record_card_home">Record</string>
    <string name="home_calender_heading">Daily Goals</string>
    <string name="home_record_heading_total_perfect_day">Total Perfect Days</string>
    <string name="home_record_heading_total_perfect_day_total_numeric">21</string>
    <string name="home_record_heading_total_perfect_day_total_Clock_time">Today at 1:00 pm</string>
    <string name="current_streak">Your Current Streak</string>
    <string name="current_streak_numeric">2</string>
    <string name="current_streak_clock_time">Today at 1:00 pm</string>
    <string name="your_best_streak">Your Best Streak</string>
    <string name="best_streak_days_numeric">4</string>
    <string name="total_habits_done">Total Habits Done</string>
    <string name="total_habits_done_numeric">7</string>
    <string name="reminder_heading">Reminders</string>
    <string name="reminder_tasks">Do Laundry</string>
    <string name="reminder_tasks_time">Today at 1:00 pm</string>
    <string name="reminder_card_button_text">Add A Reminder</string>
    <string name="journal_heading">Journal</string>
    <string name="journal_tasks">Journal of Shukr</string>
    <string name="journal_card_button_text">Add A Journal</string>
    <string name="journal_card_description">Today on the TTC a really nice lady gave her seat to me . :D</string>
    <string name="calender_radio_button_all_done">All Done</string>
    <string name="calender_radio_button_some_done">Some Done</string>
    <string name="month_name">March - Nothing done yet</string>
    <!--Here ends the Home Fragment Strings-->
    <string name="go_to_habits">Go to habits</string>
    <string name="go_to_reminders">Add reminder</string>
    <string name="go_to_journal">Write journal</string>
    <!--Here starts the Profile and settings Fragment Strings-->
    <string name="profile_name">Hamza Lakhani</string>
    <string name="profile_email">hamzalakhani10@gmail.com</string>
    <string name="lock_data">Lock Mode</string>
    <string name="Explore_Heading">EXPLORE</string>
    <string name="Upgrade_premium">Upgrade to Premium</string>
    <string name="Restore_premium_Access">Restore Premium Access</string>
    <string name="Rate_us">Rate Us</string>
    <string name="tips_hacks">Tips &amp; Hacks</string>
    <string name="blogs">Blog</string>
    <string name="Setting_Heading">SETTINGS</string>
    <string name="get_full_permission">Get Full Permission</string>
    <string name="app_in_order">Keep App in Order</string>
    <string name="change_profile_name">Change Profile Name</string>
    <string name="track_mindful_minutes">Track Mindful Minutes</string>
    <string name="privacy_terms">Privacy &amp; Terms</string>
    <string name="logout">Logout</string>
    <string name="change_name">Change Your Name</string>
    <string name="Tipsforsevendays">TIPS FOR 7 DAYS</string>
    <string name="tip1">Unlimited Habits</string>
    <string name="tip2">Location-based reminders</string>
    <string name="tip3">Better stats</string>
    <string name="tip4">And more premium features!</string>
    <string name="price">7-day trail, then $40.99 / year</string>
    <string name="ajrTracker"><b>Ajr\nTracker</b></string>
    <string name="view_progress_here">View your progress here</string>
    <string name="progress_daily_goals">Daily\nGoals</string>
    <string name="pie_chart_reminder_heading">Reminders\nCompleted\n\n</string>
    <string name="upcoming_reminders">Upcoming Reminders:</string>
    <string name="upcoming_reminders_total">3</string>
    <string name="time_remaining_heading">Time Remaining:</string>
    <string name="upcoming_reminders_digits">04:21</string>
    <string name="streaks_heading">Streaks</string>
    <string name="longest_streaks">Longest Streaks</string>
    <string name="longest_streaks_day">21</string>
    <string name="Journal_of_shukar">Journal of Shukr</string>
    <string name="add_journal">ADD</string>
    <string name="journal_second_heading">Alhumdulliah for...</string>
    <string name="calender_heading">Calender</string>
    <string name="calender_main_sub_heading">View our Calender</string>
    <string name="journal_list_name">Journal</string>
    <string name="journal_date">Jan. 8 , 2019</string>
    <string name="current_streaks">Current\nStreaks\n\n</string>
    <string name="habits_back">Habits</string>
    <string name="write_habit">Write My Own</string>
    <string name="choose_habit_type">Choose from the Following:</string>
    <string name="save">SAVE</string>
    <string name="efficiency">Efficiency</string>
    <string name="social">Social</string>
    <string name="hobby">Hobby</string>
    <string name="home">Home</string>
    <string name="fitness">Fitness</string>
    <string name="health">Health</string>
    <string name="more">More</string>
    <string name="sub_title">Sub Title</string>
    <string name="vitamins">Take Vitamins</string>
    <string name="health_habits">Health Habits</string>
    <string name="good_meal">Eat a good meal</string>
    <string name="brush">Brush &amp; Floss</string>
    <string name="sugar">Limit sugar</string>
    <string name="caffeine">Limit caffeine</string>
    <string name="take_break">Take a break</string>
    <string name="add_habit">Add Habit</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="name_hint">Enter Name</string>
    <string name="will_do_it">I will do it</string>
    <string name="without_time">Without Timer</string>
    <string name="during">Or During</string>
    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="half_hour">30 min</string>
    <string name="custom_time">Set Custom Time</string>
    <string name="icon_color">The icon colour should be</string>
    <string name="icon">The icon I would like is</string>
    <string name="schedule">Schedule</string>
    <string name="repeat_habit">Repeat this habit</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="day_week">3 days a week</string>
    <string name="do_once_day">I will do it once a day</string>
    <string name="anytime">Anytime</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="choosefrequency">Choose Frequency</string>
    <string name="takevitmens">Take Vitamins</string>
    <string name="beginner">Beginner </string>
    <string name="Intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="allhamdullilah_for">Allhamdullilah for...</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="day4">Day 4</string>
    <string name="day5">Day 5</string>
    <string name="day6">Day 6</string>
    <string name="day7">Day 7</string>
    <string name="coming_soon"> Coming Soon</string>
    <string name="coming_soon_text">Our Circles feature will be coming in the next version.</string>
    <string name="coming_soon_text2"> Stay tuned!</string>
    <string name="homescreen_reminder_heading">Choose Your Islamic Reminders</string>




</resources>