<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_marginBottom="0dp"
    android:background="@drawable/i_app_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@drawable/curve_border_white_background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:drawablePadding="20dp"
                android:text="@string/schedule"
                android:textColor="@color/input_header_color" />
            <TextView
                android:layout_marginTop="20dp"
                android:textSize="26sp"
                android:text="@string/repeat_habit"
                android:textColor="@color/input_header_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/daily"
                    android:layout_weight="1"
                    android:background="@drawable/write_habit_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:drawableTop="@drawable/colors_box"
                    android:drawablePadding="5dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/daily"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/input_header_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/weekly"
                    android:layout_weight="1"
                    android:background="@drawable/write_habit_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:drawableTop="@drawable/colors_box"
                    android:drawablePadding="5dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/weekly"
                    android:textColor="@color/input_header_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/monthly"
                    android:layout_weight="1"
                    android:background="@drawable/write_habit_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:drawableTop="@drawable/colors_box"
                    android:drawablePadding="5dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/monthly"
                    android:textColor="@color/input_header_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/day_week"
                android:textSize="16sp"
                android:textColor="@color/input_header_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/green"
                        android:text="@string/one"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/yellow"
                        android:text="@string/two"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/black"
                        android:text="@string/three"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/blue"
                        android:text="@string/four"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/pink"
                        android:text="@string/five"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/do_once_day"
                android:textSize="16sp"
                android:textColor="@color/input_header_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/morning"
                    android:layout_weight="1"
                    android:background="@drawable/write_habit_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:drawableTop="@drawable/colors_box"
                    android:drawablePadding="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/morning"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/input_header_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/afternoon"
                    android:layout_weight="1"
                    android:background="@drawable/write_habit_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:drawableTop="@drawable/colors_box"
                    android:drawablePadding="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/afternoon"
                    android:textColor="@color/input_header_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/evening"
                    android:layout_weight="1"
                    android:background="@drawable/write_habit_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:drawableTop="@drawable/colors_box"
                    android:drawablePadding="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/evening"
                    android:textColor="@color/input_header_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/custom_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/write_habit_button">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:drawableStart="@drawable/colors_box"
                    android:drawablePadding="20dp"
                    android:textColor="@color/input_header_color"
                    android:text="@string/anytime"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/save"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:text="@string/save"
            android:background="@drawable/curve_button_green"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>
</ScrollView>

